--- a/src/app/dashboard/dashboard.page.scss
+++ b/src/app/dashboard/dashboard.page.scss
@@ -3,10 +3,6 @@
     color:rgb(223, 223, 3);
 }
 
-.container-fix {
-    padding: 0 13px !important;
-}
-
 .topBar-outer {
     margin-bottom: 3px;
 }
